# phase_center

./: .gitignore  README.md  pyproject.toml
data/processed/: best_fit_02_36_2024_22_36_08_bootstrap_500.csv  best_fit_02_39_2024_22_39_07_bootstrap_500.csv  best_fit_2024_ 527_20_23_21.csv  best_fit_28_03_2024_22_03_05_None.csv  best_fit_28_03_2024_22_03_37_None.csv  best_fit_31_36_2024_00_36_47_boostrap5_crosspol.csv  best_fit_31_39_2024_00_39_46_boostrap500_crosspol.csv  data_02_36_2024_22_36_08_bootstrap_500.csv  data_02_39_2024_22_39_07_bootstrap_500.csv  data_28_03_2024_22_03_05.csv  data_31_36_2024_00_36_47_boostrap5_crosspol.csv  predicted_02_36_2024_22_36_08_bootstrap_500.csv  predicted_02_39_2024_22_39_07_bootstrap_500.csv  predicted_2024_ 527_20_23_21.csv  predicted_28_03_2024_22_03_05_None.csv  predicted_28_03_2024_22_03_37_None.csv
notebooks/: 00_LB_PHASE_CENTER_RESULTS_23052024.ipynb  PHASE_CENTER.ipynb  PHASE_CENTER_REPORT_500.ipynb  PHASE_CENTER_REPORT_ODR.ipynb  PHASE_CENTER_REPORT_OLS.ipynb
phasecenter/: beams.py  make_dataset.py  phasecenter.py
