[tool.poetry]
name = "phase-center"
version = "0.1.0"
description = ""
authors = ["lbarosi <lbarosi@df.ufcg.edu.br>"]
readme = "README.md"

include = [
  { path = "phasecenter"}
  ]
packages = [
     { include = "phasecenter.py", from = "phasecenter"},
]

[tool.poetry.dependencies]
python = "^3.11"
lmfit = "^1.3.1"
numpy = "^1.26.4"
scipy = "^1.13.0"
astropy = "^6.1.0"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
ruff = "^0.4.5"
mypy = "^1.10.0"
tabulate = "^0.9.0"
jinja2 = "^3.1.4"
nbconvert = "^7.16.4"
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
install = "^1.3.5"
ruff = "^0.4.4"
ipython = "^8.24.0"
ipykernel = "^6.29.4"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ERA001", "SLF001", "N802", "N803", "N806", "D102", "ANN101", "D100", "D103", "D101", "PLR0913", "D107"]

[tool.ruff]
line-length = 85